# inap

./: ChangeLog  Makefile.am  NEWS  README.build  README.maintainer  README.md  configure.ac  inap.rel.in  sys.config.in
asn_src/: CS1-Codes.asn1  CS1-DataTypes.asn1  CS1-Errors.asn1  CS1-Operations.asn1  CS2-SCF-CUSF-ops-args.asn1  CS2-SCF-CUSF-pkgs-contracts-acs.asn1  CS2-SCF-SCF-ops-args.asn1  CS2-SCF-SCF-pkgs-contracts-acs.asn1  CS2-SCF-SDF-Operations.asn1  CS2-SCF-SDF-Protocol.asn1  CS2-SCF-SRF-ops-args.asn1  CS2-SCF-SRF-pkgs-contracts-acs.asn1  CS2-SDF-BasicAccessControl.asn1  CS2-SDF-InformationFramework.asn1  CS2-SDF-SDF-Protocol.asn1  CS2-SSF-SCF-ops-args.asn1  CS2-SSF-SCF-pkgs-contracts-acs.asn1  CS2-classes.asn1  CS2-datatypes.asn1  CS2-errorcodes.asn1  CS2-errortypes.asn1  CS2-object-identifiers.asn1  CS2-operationcodes.asn1  Core-INAP-CS1-Codes.asn1  Core-INAP-CS1-DataTypes.asn1  Core-INAP-CS1-Errors.asn1  Core-INAP-CS1-Operations.asn1  EnhancedSecurity.asn1  Makefile.am  Tariffing-Data-Types.asn1  UsefulDefinitions.asn  inap_code.set.asn1  inap_codec.set.asn1  inap_cs1_codec.set.asn1
doc/: Makefile.am  overview.edoc-in
ebin/: Makefile.am  inap.app-in  inap.appup.in
src/: Makefile.am
