## Makefile.am
##
## Process this file with automake to produce Makefile.in

asn_DATA = CS2-SSF-SCF-pkgs-contracts-acs.asn1 \
		CS2-SCF-SRF-pkgs-contracts-acs.asn1 \
		CS2-SCF-SCF-pkgs-contracts-acs.asn1 \
		CS2-SCF-CUSF-pkgs-contracts-acs.asn1 \
		CS2-SSF-SCF-ops-args.asn1 \
		CS2-SCF-SRF-ops-args.asn1 \
		CS2-SCF-SCF-ops-args.asn1 \
		CS2-SCF-CUSF-ops-args.asn1 \
		CS2-SCF-SDF-Operations.asn1 \
		CS2-SCF-SDF-Protocol.asn1 \
		CS2-SDF-BasicAccessControl.asn1 \
		CS2-SDF-InformationFramework.asn1 \
		CS2-SDF-SDF-Protocol.asn1 \
		CS2-classes.asn1 \
		CS2-datatypes.asn1 \
		CS2-errorcodes.asn1 \
		CS2-errortypes.asn1 \
		CS2-object-identifiers.asn1 \
		CS2-operationcodes.asn1 \
		EnhancedSecurity.asn1 \
		MobileDomainDefinitions.asn1 \
		Tariffing-Data-Types.asn1 \
		UsefulDefinitions.asn
